# kiddybank-api

./: .dccache  .env-template  Cargo.toml  README.md  docker-compose.yaml  pom.xml
.github/workflows/: build_and_push.yaml
migrations/2023-01-08-223002_create_user/: up.sql
migrations/2023-01-08-223744_create_kids/: down.sql  up.sql
migrations/2023-01-08-224524_create_transactions/: up.sql
migrations/2023-03-19-220111_remove_initial_balance/: down.sql  up.sql
migrations/2023-04-05-182137_Add description to transactions/: down.sql  up.sql
src/: crud.rs  jwt.rs  lib.rs  main.rs  models.rs  schema.rs
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/java/org/pmkv/rest/json/: Kid.java  KidDTO.java  KidResource.java  KiddyBankUser.java  KiddyBankUserResource.java  Transaction.java  TransactionDTO.java  TransactionResource.java
src/main/resources/: application.properties
