[package]
name = "kiddybank-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "serde_json"] }
dotenvy = "0.15"
alcoholic_jwt = "4091.0.0"
reqwest = "0.11.13"
