[package]
name = "kiddybank-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
cached = { version = "0.42" }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15"
alcoholic_jwt = "4091.0.0"
reqwest = "0.11.13"
